--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "baseUrl": "./src",
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "api",
     "moduleResolution": "node",
     "resolveJsonModule": true,
   },
