--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "node-telegram-bot-api": "^0.64.0"
+    "node-telegram-bot-api": "^0.64.0",
+    "telegraf": "^4.15.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
     "@types/node-telegram-bot-api": "^0.64.2",
+    "@vercel/node": "^3.0.16",
     "typescript": "^5.3.3"
   }
 }
