--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/index.js\""
   },
   "keywords": [
     "bot",
@@ -15,13 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "node-telegram-bot-api": "^0.64.0",
     "telegraf": "^4.15.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
-    "@types/node-telegram-bot-api": "^0.64.2",
     "@vercel/node": "^3.0.16",
+    "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   }
 }
